--- a/Alllive/Views/Shared/_Layout.cshtml
+++ b/Alllive/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                         {
                             <li>@Html.ActionLink("New Meeting", "ScheduleMeeting", "Meeting")</li>
                         }
-                    <li>@Html.ActionLink("Schedule", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Schedule", "Index", "Home")</li>
                     }
                     <li>@Html.ActionLink("Join Meeting", "JoinMeeting", "Meeting")</li>
                     <li>@Html.ActionLink("Distance Learning", "DistanceLearning", "Navigation")</li>
@@ -87,8 +87,9 @@
         </footer>
     </div>
 
-    
+
 
     @RenderSection("scripts", required: false)
 </body>
 </html>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
