--- a/Alllive/Content/Site.css
+++ b/Alllive/Content/Site.css
@@ -54,3 +54,8 @@ div.row{
     color:#ccc;
     font-style:italic;
 }
+
+.single-card-row {
+    border-bottom: 1px solid #000;
+    padding: 5px 0px 10px 0px;
+}
