--- a/Alllive/Views/Billing/AccountList.cshtml
+++ b/Alllive/Views/Billing/AccountList.cshtml
@@ -1,29 +1,28 @@
 ﻿@model IEnumerable<UserAccount>
-    <style>
-        hr {
-            width: 50%;
-            margin: 0 auto;
-        }
-    </style>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<div class="container">
-    @foreach (var account in Model)
-    {
-        <div class="row">
-            <div class="col-md-4">testing</div>
-            <div class="col-md-3">
+<div class="row">
+    <div class="col-md-3">
+        <h5>Add Additonal Payment Method &nbsp; <a class="btn btn-primary" href="@Url.Action("AddAccount","Billing")"><i class="fa fa-plus"></i></a></h5>
 
-                <i class="fa fa-cc-visa" aria-hidden="true">
-                </i>
-                @account.AccountName
+    </div>
+    <div class="col-md-4">
+        <div>Payment Methods</div>
+
+        @foreach (var account in Model)
+        {
+            <div class="row single-card-row">
+                <div class="col-md-4"></div>
+                <div class="col-md-8">
+
+                    <i class="fa fa-cc-visa" aria-hidden="true">
+                    </i>
+                    @account.AccountName
 
                     <button class="btn btn-danger" onclick="accountDelete_Click(@account.UserAccountID)"><i class="fa fa-trash"></i></button>
-                
+
+                </div>
             </div>
-            <br />
-        </div>
-        <hr />
-    }
+        }
+    </div>
 </div>
 
