--- a/Alllive/Views/User/ViewProfile.cshtml
+++ b/Alllive/Views/User/ViewProfile.cshtml
@@ -52,9 +52,11 @@
             </div>
         }
     </div>
-<div>
-    <h3>Accounts &nbsp; <a class="btn btn-primary" href="@Url.Action("AddAccount","Billing")"><i class="fa fa-plus"></i></a></h3>
-</div>
+    <div>
+        <h3>Accounts &nbsp; <a href="@Url.Action("AccountList","Billing")"><i class="fa fa-folder-open"></i></a></h3>
+        @*<h3>Accounts &nbsp; <a class="btn btn-primary" href="@Url.Action("AddAccount","Billing")"><i class="fa fa-plus"></i></a></h3>*@
+
+    </div>
 <div class="container">
     @if (Model.TutorProfile != null)
     {
