worked on stripe config

--- a/Alllive/Views/Billing/AccountList.cshtml
+++ b/Alllive/Views/Billing/AccountList.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<UserAccount>
+﻿@model IEnumerable<PaymentMethodViewModel>
+@*//@model IEnumerable<UserAccount>*@
 
 <div class="row">
     <div class="col-md-3">
