--- a/Alllive/Views/User/ViewProfile.cshtml
+++ b/Alllive/Views/User/ViewProfile.cshtml
@@ -53,8 +53,17 @@
         }
     </div>
     <div>
-        <h3>Accounts &nbsp; <a href="@Url.Action("AccountList","Billing")"><i class="fa fa-folder-open"></i></a></h3>
-        @*<h3>Accounts &nbsp; <a class="btn btn-primary" href="@Url.Action("AddAccount","Billing")"><i class="fa fa-plus"></i></a></h3>*@
+        <div class="row">
+            <div class="col-md-3">
+                <h3>Credit Cards &nbsp; <a href="@Url.Action("AccountList","Billing")"><i class="fa fa-folder-open"></i></a></h3>
+            </div>
+            @if (Model.User.isTutor)
+            {
+            <div class="col-md-3">
+                <h3>Bank Accounts &nbsp; <a href="@Url.Action("ListTutorBankAccounts", "Billing")"><i class="fa fa-folder-open"></i></a></h3>
+            </div>
+            }
+         </div>
 
     </div>
 <div class="container">
