--- a/Alllive/Views/Home/Index.cshtml
+++ b/Alllive/Views/Home/Index.cshtml
@@ -1,11 +1,33 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-    <div class="container" height="100%" width="100%">
-        <div class="splash-div" ; style="background-image: url('../../Images/laptopboy.jpg'); background-size: cover; width: 100%; height: ;">
-
+    <div height="100%" width="100%" margin-left :-220px;>
+        <div height="100%" width="100%">
+            <img class="splash-div" src="../../Images/laptopboy.jpg" width="100%" />
         </div>
     </div>
+<style>
+    .container{
+        width: 100%;
+
+    }
+    .body-content{
+        padding-left:0;
+        padding-right:0;
+    }
+
+</style>
+@*<div class="splash-div" ; style="background-image: url('../../Images/laptopboy.jpg'); margin-left :-220px; background-size: cover; width: 1500px; height: 800px;">
+    <div class="col-lg-1"></div>
+    <div class="row" ; style="padding:20px; font-size:24px; position:absolute; right:300px; ">
+        <div style="padding:0px; margin-bottom:50px; "><h1>Alllive Web Conferencing</h1></div>
+        
+        <div ><h2 style="margin-bottom: 0px;">Online Yoga</h2></div>
+        
+        <div ><h2>Distance Learning</h2></div>
+    </div>
+</div>*@
+
 
 @*<div class="jumbotron">
         <h1>ASP.NET</h1>
